--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -128,58 +128,79 @@
             <h2>Portfolio Overview</h2>
           </div>
         </div>
-        <div class="portfolio-headers portfolio-row">
-          <div class="portfolio-rank">
-            <h4>Rank</h4>
-          </div>
-          <div class="portfolio-name">
-            <h4>Name</h4>
-          </div>
-          <div class="portfolio-price">
-            <h4>Price</h4>
-          </div>
-          <div class="portfolio-value-held">
-            <h4 style="padding-right: 5px">Value Held</h4>
-          </div>
-          <div class="portfolio-profit-loss">
-            <h4 style="padding-right: 10px">Profit/Loss</h4>
-          </div>
+        <div class="portfolio-table">
+          <table class="portfolio-table">
+            <thead>
+              <tr>
+                <th class="rank-column">Rank</th>
+                <th class="name-column name-col">Name</th>
+                <th class="price-column">Price</th>
+                <th class="value-column">Value Held</th>
+                <th class="profit-column end-col">Profit/Loss</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @portfolios.each_with_index do |portfolio, index|  %>
+                <%= link_to "cryptocurrencies?crypto_id=#{portfolio.cryptocurrency.id}" do %>
+                <tr>
+                  <td class="body-rank rank-column"><%= index + 1 %></td>
+                  <td class="body-name name-col">
+                    <div class="name-field-table">
+                      <%= image_tag "#{portfolio.cryptocurrency.ticker_code}.png", class: "portfolio-icon" %>
+                      <h4><%= portfolio.cryptocurrency.ticker_name %> <span class="crypto-code"><%= portfolio.cryptocurrency.ticker_code %></span></h4>
+                    </div>
+                  </td>
+                  <% current_price = @portfolio_overview[portfolio.cryptocurrency.ticker_name][portfolio.cryptocurrency.ticker_code] %>
+                  <td class="body-value price-column">$<%= number_with_delimiter(current_price.round(4), delimeter: ',') %></td>
+                  <% value_held = (current_price * portfolio.crypto_amount_held).round %>
+                  <td class="body-value value-column">$<%= number_with_delimiter(value_held, delimeter: ',') %></td>
+                  <% profit_loss = value_held - (portfolio.fiat_amount_cents / 100) %>
+                  <% if profit_loss >= 0 %>
+                  <td class="body-value profit-column end-col positive">$<%= number_with_delimiter(profit_loss.round, delimeter: ',') %></td>
+                  <% else %>
+                  <td class="body-value profit-column end-col negative">$<%= number_with_delimiter(profit_loss.round * -1, delimeter: ',') %></td>
+                  <% end %>
+                </tr>
+                <% end %>
+              <% end %>
+            </tbody>
+          </table>
         </div>
-        <div class="crypto-rows">
+        <!-- <div class="crypto-rows"> -->
           <!-- Row for each crypto here -->
-          <% @portfolios.each_with_index do |portfolio, index|  %>
-            <%= link_to "cryptocurrencies?crypto_id=#{portfolio.cryptocurrency.id}" do %>
-              <div class="portfolio-link">
-                <div class="portfolio-crypto portfolio-row">
-                  <div class="portfolio-rank crypto-rank">
-                    <h4><%= index + 1 %></h4>
+          <%# @portfolios.each_with_index do |portfolio, index|  %>
+            <%#= link_to "cryptocurrencies?crypto_id=#{portfolio.cryptocurrency.id}" do %>
+              <!-- <div class="portfolio-link"> -->
+                <!-- <div class="portfolio-crypto portfolio-row"> -->
+                  <!-- <div class="portfolio-rank crypto-rank">
+                    <h4><%#= index + 1 %></h4>
                   </div>
                   <div class="portfolio-name crypto-name">
-                    <%= image_tag "#{portfolio.cryptocurrency.ticker_code}.png", class: "portfolio-icon" %>
-                    <h4><%= portfolio.cryptocurrency.ticker_name %> <span class="crypto-code"><%= portfolio.cryptocurrency.ticker_code %></span></h4>
+                    <%#= image_tag "#{portfolio.cryptocurrency.ticker_code}.png", class: "portfolio-icon" %>
+                    <h4><%#= portfolio.cryptocurrency.ticker_name %> <span class="crypto-code"><%#= portfolio.cryptocurrency.ticker_code %></span></h4>
                   </div>
                   <div class="portfolio-price crypto-price">
-                    <% current_price = @portfolio_overview[portfolio.cryptocurrency.ticker_name][portfolio.cryptocurrency.ticker_code] %>
-                    <h4>$<%= number_with_delimiter(current_price.round(4), delimeter: ',') %></h4>
+                    <%# current_price = @portfolio_overview[portfolio.cryptocurrency.ticker_name][portfolio.cryptocurrency.ticker_code] %>
+                    <h4>$<%#= number_with_delimiter(current_price.round(4), delimeter: ',') %></h4>
                   </div>
                   <div class="portfolio-value-held crypto-value-held">
-                    <% value_held = (current_price * portfolio.crypto_amount_held).round %>
-                    <h4>$<%= number_with_delimiter(value_held, delimeter: ',') %></h4>
+                    <%# value_held = (current_price * portfolio.crypto_amount_held).round %>
+                    <h4>$<%#= number_with_delimiter(value_held, delimeter: ',') %></h4>
                   </div>
                   <div class="portfolio-profit-loss crypto-profit-loss">
-                    <% profit_loss = value_held - (portfolio.fiat_amount_cents / 100) %>
-                    <% if profit_loss < 0 %>
-                      <h4><span class="negative">$<%= number_with_delimiter(profit_loss.round * -1, delimeter: ',') %></span></h4>
-                    <% else %>
-                      <h4><span class="positive">$<%= number_with_delimiter(profit_loss.round, delimeter: ',') %></span></h4>
-                    <% end %>
+                    <%# profit_loss = value_held - (portfolio.fiat_amount_cents / 100) %>
+                    <%# if profit_loss < 0 %>
+                      <h4><span class="negative">$<%#= number_with_delimiter(profit_loss.round * -1, delimeter: ',') %></span></h4>
+                    <%# else %>
+                      <h4><span class="positive">$<%#= number_with_delimiter(profit_loss.round, delimeter: ',') %></span></h4>
+                    <%# end %>
                   </div>
                 </div>
-              </div>
-            <% end %>
-          <% end %>
+              </div> -->
+            <%# end %>
+          <%# end %>
           <!-- Row for each crypto here -->
-        </div>
+        <!-- </div> -->
       </div>
     </div>
   </div>
