--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Croker</title>
-  <%= favicon_link_tag 'favicon.ico' %>
-  <%= csrf_meta_tags %>
-  <%= action_cable_meta_tag %>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
-</head>
-<body>
-  <div id="fb-root"></div>
-  <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '775157016169525',
-      xfbml      : true,
-      version    : 'v3.2'
-    });
-    FB.AppEvents.logPageView();
-  };
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Croker</title>
+    <%= favicon_link_tag 'favicon.ico' %>
+    <%= csrf_meta_tags %>
+    <%= action_cable_meta_tag %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+  </head>
+  <body>
+    <div id="fb-root"></div>
+    <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '775157016169525',
+        xfbml      : true,
+        version    : 'v3.2'
+      });
+      FB.AppEvents.logPageView();
+    };
 
-</script>
+  </script>
 
-  <% if controller.class == PagesController && controller.action_name == 'home' %>
+    <% if controller.class == PagesController && controller.action_name == 'home' %>
 
-  <% elsif current_user %>
-    <%= render 'shared/navbar_croker_logged_in' %>
-  <% else %>
-    <%= render 'shared/navbar_croker_sign_up' %>
-  <% end %>
-  <%= render 'shared/flashes' %>
-  <div style="min-height: calc(100vh - 130px);">
-    <%= yield %>
-  </div>
-  <% if controller.class == DashboardsController && controller.action_name == 'dashboard' || controller.class == PagesController && controller.action_name == 'home'%>
-    <%= render 'shared/footer' %>
-  <% else %>
-    <%= render 'shared/slim_footer' %>
-  <% end %>
-  <%= javascript_include_tag 'application' %>
-  <%= javascript_pack_tag 'application' %>
-</body>
+    <% elsif current_user %>
+      <%= render 'shared/navbar_croker_logged_in' %>
+    <% else %>
+      <%= render 'shared/navbar_croker_sign_up' %>
+    <% end %>
+    <%= render 'shared/flashes' %>
+    <div style="min-height: calc(100vh - 130px);">
+      <%= yield %>
+    </div>
+    <% if controller.class == DashboardsController && controller.action_name == 'dashboard' || controller.class == PagesController && controller.action_name == 'home'%>
+      <%= render 'shared/footer' %>
+    <% else %>
+      <%= render 'shared/slim_footer' %>
+    <% end %>
+    <%= javascript_include_tag 'application' %>
+    <%= javascript_pack_tag 'application' %>
+
+    <script type= "text/javascript">
+      $('document').ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+
+  </body>
 </html>
