ADDED JAVASCRIPT FUNCTIONALITY TO BUY AND SELL TAB CONFIRMATION
ADDED SWEET ANIMATIONS THAT AUTO FULFIL BASED ON USER INPUTS
HAD TO REFORM THE WHOLE SHOW PAGE HTML IN ORDER TO MAKE FORMS FOR BUY AND FORMS FOR SELL FOR EASIER BACKEND COMMUNICATION

ADDED CSS STYLE TO SHOW OR HIDDEN TABS

--- a/app/assets/stylesheets/components/_crypto-show.scss
+++ b/app/assets/stylesheets/components/_crypto-show.scss
@@ -53,12 +53,15 @@
 .buy-sell-tabs {
   display: flex;
   height: 60px;
+
   .buy-tab {
     width: 50%;
   }
+
   .sell-tab {
     width: 50%;
   }
+
   .tab {
     margin: 0;
     padding-left: 0;
@@ -96,7 +99,8 @@
   margin-top: 45px;
   justify-content: center;
   align-items: center;
-  form {
+
+  input {
     margin: 10px;
   }
 }
