--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,10 +27,10 @@
               <a class="page-scroll" href="#download">How it works</a>
             </li>
             <li>
-              <%= link_to "Login",  new_user_session_path, method: :get, class: "sign-up my-btn" %>
+              <%= link_to "Login",  new_user_session_path, class: "sign-up my-btn", "data-toggle" => "modal", "data-target" => "#myModal" %>
             </li>
             <li>
-             <%= link_to "Sign Up", new_user_registration_path, class: "sign-up my-btn" %>
+             <%= link_to "Sign Up", new_user_registration_path, class: "sign-up my-btn", "data-toggle" => "modal", "data-target" => "#myModal"%>
             </li>
           </ul>
         </div>
@@ -38,6 +38,16 @@
       </div>
       <!-- /.container -->
     </nav>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <%#= render "devise/registrations/new" %>
+        </div>
+      </div>
+    </div>
 
     <!-- Intro Header -->
     <div class="landing-intro">
