--- a/app/views/shared/_navbar_croker_sign_up.html.erb
+++ b/app/views/shared/_navbar_croker_sign_up.html.erb
@@ -14,10 +14,21 @@
   </div>
   <div class="navbar-right">
     <div class="btn-sign-up">
-      <%= link_to 'Sign Up', new_user_registration_path, class: "sign-up btn btn-success" %>
+      <%= link_to 'Sign Up', new_user_registration_path, class: "sign-up btn btn-success", "data-toggle" => "modal", "data-target" => "#myModal"%>
     </div>
+
     <div class="btn-login">
-      <%= link_to 'Log In', new_user_session_path, class: "login btn" %>
+      <%= link_to 'Log In', new_user_session_path, class: "login btn", "data-toggle" => "modal", "data-target" => "#myModal" %>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <%#= render "devise/registrations/new" %>
     </div>
   </div>
 </div>
