--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,7 +8,23 @@
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 4px;
+  margin-right: 0;
 }
+
+.lp-sign-up-btn {
+  font-size: 25px;
+  font-weight: regular;
+  padding: 15px 15px;
+  background-color: #60CD45;
+  color: white;
+  border-radius: 40px;
+}
+
+.lp-sign-up-btn:hover {
+  background-color: #49AE2F;
+  color: white;
+}
+
 
 .landing-navbar-font-specs {
   font-weight: 400;
@@ -21,11 +37,31 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-family: 'Lato', 'sans-serif';
+  padding: 0px 40px;
   // background-color: #60CD44;
+  // background-image: -webkit-linear-gradient(60deg, #60CD44 50%, #EAEAEA 50%);
+
+}
+
+// @media (min-width: 768px) {
+  .landing-navbar-custom {
+    padding: 10px 0;
+    border-bottom: none;
+    letter-spacing: 1px;
+    background: #60CD44;
+    background-image: -webkit-linear-gradient(-120deg, #60CD44 50%, #EAEAEA 50%);
+
+    // -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    // -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    // transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+}
+
+.navbar-brand {
+  margin-left: 50px;
 }
 
 .landing-nav-tabs {
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .landing-navbar-custom a {
@@ -36,31 +72,28 @@
   color: rgba(255, 255, 255, 0.8);
   outline: none;
   background-color: #60CD44;
-  color: white;
+  // color: white;
 }
 
 .landing-navbar-custom .nav li.active a {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-@media (min-width: 768px) {
-  .landing-navbar-custom {
-    padding: 10px 0;
-    border-bottom: none;
-    letter-spacing: 1px;
-    background: #60CD44;
-    // -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    // -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    // transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-  }
-}
 
 .landing-intro {
   padding: 100px 0;
   text-align: center;
-  background-color: #60CD44;
-  height: 80vh;
-  font-size: 40px;
+  // background-color: #60CD44;
+  height: 100vh;
+  h1 {
+    font-size: 40px;
+    padding-bottom: 20px;
+  }
+  p {
+    font-size: 35px;
+    padding-bottom: 30px;
+  }
+  // font-size: 40px;
   // display: table;
   // width: 100%;
   // height: auto;
@@ -72,8 +105,22 @@
   // -o-background-size: cover;
 }
 
+
+
+.landing-section-wrapper {
+// padding: 20px 40px;
+// margin: 20px;
+padding: 20px 40px 0px 40px;
+margin: 20px 20px 0px 20px;
+}
+
+.landing-compo-main-wrapper {
+height: 100vh;
+}
+
 .landing-compo-top-wrapper {
-  padding-top: 10px;
+  padding-top: 75px;
+  padding-bottom: 100px;
 }
 
 
@@ -84,16 +131,26 @@
   padding-top: 20px;
 }
 
-.landing-compo-container h3 {
-  font-size: 15px;
-  // padding-top: 10px;
+.landing-compo-top-container h2 {
+  font-size: 30px;
+  padding-bottom: 20px;
 }
+
+.landing-compo-top-container p {
+    font-size: 20px;
+}
+// h3 {
+//   font-size: 15px;
+//   // padding-top: 10px;
+// }
 
 .col-icons {
   text-align: center;
   padding: 60px 20px;
   h3 {
-  padding: 0 5px;
+  font-size: 25px;
+  max-width: 512px;
+  padding: 0px 70px;
   }
 }
 
@@ -108,14 +165,21 @@
 
 
 .landing-ending {
-  // display: table;
   width: 100%;
-  height: auto;
-  padding: 100px 0;
+  height: 50vh;
+  padding: 0px 0px 20px 0px;
   text-align: center;
-  color: white;
+  h1 {
+    font-size: 40px;
+    padding-bottom: 30px;
+  }
+  p {
+    font-size: 30px;
+    font-weight: light;
+    padding-bottom: 30px;
+  }
   // background-color: #60CD44;
-  // background-image: -webkit-linear-gradient(-120deg, #60CD44 50%, #EAEAEA 50%);
+  // background-image: -webkit-linear-gradient(60deg, #60CD44 50%, #EAEAEA 50%);
 }
 
 
